@@ -56,6 +56,7 @@ sbuild_public_h_sources =		\
 	sbuild-chroot-file.h		\
 	sbuild-chroot-lvm-snapshot.h	\
 	sbuild-chroot-plain.h		\
+	sbuild-chroot-source.h		\
 	sbuild-chroot-config.h		\
 	sbuild-environment.h		\
 	sbuild-error.h			\
@@ -79,6 +80,7 @@ sbuild_public_cc_sources =		\
 	sbuild-chroot-file.cc		\
 	sbuild-chroot-lvm-snapshot.cc	\
 	sbuild-chroot-plain.cc		\
+	sbuild-chroot-source.cc		\
 	sbuild-chroot-config.cc		\
 	sbuild-environment.cc		\
 	sbuild-keyfile.cc		\
